edited bug for geometric design section, improved artImg spacing with additional classes

--- a/app/public/assets/css/art.css
+++ b/app/public/assets/css/art.css
@@ -131,7 +131,7 @@ div.modal-footer {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    padding-top: 15%;
+    margin-top: 14%;
 }
 .ladyinredPurple {
     display: block;
@@ -169,17 +169,12 @@ div.modal-footer {
     margin-left: auto;
     margin-right: auto;
 }
-.patternOrange {
-    width: 100%;
-    height: 100%;
-}
-.paintbrushPattern {
-    width: 100%;
-    height: 100%;
-}
-.patternMarker {
+.patternMarker, .patternMarker-white,
+.paintbrushPattern, .patternOrange,
+.teardropSnowflake {
     width: 100%;
     margin-left: auto;
+    margin-right: auto;
 }
 .geometricSnowflake,
 .pinkCrayon,
@@ -188,11 +183,13 @@ div.modal-footer {
 .greenPattern,
 .geometricSnowflake-white {
     width: 100%;
-    height: 100%;
 }
-.pinkCrayon {
-    padding-bottom: 3%;
-    padding-top: 3%;
+.patternMarker, .patternOrange, .paintbrushPattern,
+.geometricSnowflake {
+margin-top: 6%;
+}
+.patternOrange {
+    margin-top: 9%;
 }
 .webBanner {
     width: 75%;
